@@ -38,6 +38,7 @@ Changes on purpose:
 
  * Users are allowed to add themself in their home project, even when they got removed.
    Admins should use the user state and set them to "locked" when they do want to block them.
+ * request "addrevision" option is using unexpanded revision when "updatelink" option is used
 
 Incompatible changes:
 =====================
